[tool.poetry]
name = "populate-nautobot"
version = "0.1.0"
description = ""
authors = ["Jeremy White <jeremy.lee.w@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nautobot = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
